<!--
  ~    Copyright (C) 2018 MINDORKS NEXTGEN PRIVATE LIMITED
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">VXX</string>
    <string name="load_data">Load Data</string>
    <string name="hint_write">Viết để xóa đi…</string>
    <string name="name_user">\@someome</string>
    <string name="text_post">Better use a 9 patch in this case. just draw the upper and lower borders and leave the right and left borders transparent. Of course, excluding the 9 patch markers.</string>
    <string name="text_hint">\@someone</string>
    <string name="text_time">Vừa xong</string>
    <string name="create_hint">Một cái tên nào đó…</string>

    <string name="hint_writing">Viết để xóa đi…</string>
    <string name="text_create">Vào để viết</string>
    <string name="text_delete">Xóa đi</string>
    <string name="toast_entry_name">Tên người dùng trống.</string>
    <string name="btn_back">Quay lại</string>
    <string name="error">Đã có lỗi xảy ra!</string>
    <string name="title_dialog">Hãy đánh 5 * cho ứng dụng được tốt hơn</string>
    <string name="content_dialog">Những đánh giá và ý kiến đóng góp của bạn sẽ được chúng tôi lắng nghe và phát triển ứng dụng ngày càng tốt hơn.</string>
    <string name="yes_dialog">Có</string>
    <string name="no_dialog">Thoát</string>
    <string name="view_more">Xem thêm</string>

    <string name="title_create">Chỉ là một cái tên</string>
    <string name="title_main">#trending</string>
    <string name="title_detail">Viết để xóa đi…</string>
    <string name="title_comment">Bình luận</string>
    <string name="empty_comment">Tham gia bình luận cho hoạt động này</string>
    <string name="enter_comment">Nhập bình luận…</string>
    <string name="answer">Trả lời</string>
    <string name="comment">bình luận</string>
    <string name="zero">0</string>
    <string name="send">Send</string>
    <string name="read_more">…Xem thêm</string>
    <string name="no_data">Hiện chưa có dữ liệu!</string>
    <string name="retry">Thử lại</string>
</resources>
