<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:indeterminateDrawable="@drawable/process" />

    <LinearLayout
        android:id="@+id/layout_retry"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error" />

        <Button
            android:id="@+id/button_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/primaryPadding"
            android:layout_marginLeft="@dimen/primaryPadding"
            android:paddingLeft="@dimen/primaryPadding"
            android:paddingRight="@dimen/primaryPadding"
            android:paddingTop="@dimen/secondaryPadding"
            android:paddingBottom="@dimen/secondaryPadding"
            android:background="@color/colorPrimary"
            android:text="@string/retry"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:layout_weight="3"
        android:id="@+id/text_no_more_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_data" />

</LinearLayout>
